# testing-system

./: .gitignore  .travis.yml  CNAME  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: django.yml
src/project/: admin.py  forms.py  models.py  urls.py  views.py
src/templates/: authentication.html  cases_page.html  create_report.html  create_suite.html  create_testplan.html  edit_case.html  edit_suite.html  edit_testcase.html  index.html  perform_suite.html  project_page.html  suites_page.html  testing_page.html
src/test_components/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
src/testflow/: context.py  settings.py  urls.py
src/testflow/testflow/: asgi.py  settings.py
src/user/: forms.py  models.py  urls.py  views.py
testflow/testflow/: urls.py  wsgi.py
