[tool.poetry]
name = "testflow"
version = "0.1.0"
description = "Проект системы тестирования по предмету \"Проектирование защищенных информационных систем\" НИЯУ МИФИ"
authors = ["aeroshev <aeroshev@mail.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.4"
psycopg2-binary = "^2.9.5"


[tool.poetry.group.tests.dependencies]
pytest = "^7.2.0"


[tool.poetry.group.lint.dependencies]
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
