[tool.poetry]
name = "testflow"
version = "0.1.0"
description = "Проект системы тестирования по предмету \"Проектирование защищенных информационных систем\" НИЯУ МИФИ"
authors = ["aeroshev <aeroshev@mail.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.4"
psycopg2-binary = "^2.9.5"
gunicorn = "^20.1.0"


[tool.poetry.group.tests.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
faker = "^15.3.4"


[tool.poetry.group.lint.dependencies]
mypy = "^0.991"
isort = "^5.11.4"
flake8-pyproject = "^1.2.2"


[tool.pytest.ini_options]
minversion = "7.2.0"
pythonpath = "src"
addopts = "-p no:warnings -v --cov-report xml:coverage.xml --cov=src --cov-config=.coveragerc"
testpaths = "tests"
junit_family = "xunit1"


[tool.isort]
multi_line_output = 3
profile = "black"
known_first_party = ["project", "test_components", "user", "testflow"]
skip = "migrations"


[tool.mypy]
python_version = 3.11
ignore_missing_imports = "True"
exclude = ["settings.py", "manage.py", "migrations"]


[tool.flake8]
exlclude = ["migrations", "__pycache__", "manage.py", "settings.py"]
max-line-length = 103


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
